[package]
name = "axiom-scaffold"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
ark-std = { version = "0.3.0", features = ["print-trace"] }
rand_core = "0.6"

# halo2
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v2023_04_06", default-features = false, features = ["jemallocator"] }
axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", branch = "axiom-dev-0406", default-features = false, features = ["halo2-axiom", "aggregation", "evm", "clap"] }

ethers-core = { version = "2.0.2" }
ethers-providers = { version = "2.0.2" }
tokio = { version = "1.26", default-features = false, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
test-log = "0.2.11"

[features]
default = ["display"]
display = ["axiom-eth/display"]
production = ["axiom-eth/production"]

[profile.dev]
opt-level = 3
debug = 1 # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
